--- a/cash.html
+++ b/cash.html
@@ -3320,14 +3320,14 @@
                                         </span> 
                                     </p>
                                 </div>
-                                <span><strong>{{account.account_info.name_english}}</strong></span>
+                                <span><strong>{{account_info.identification_country.name_en_US}}</strong></span>
                             </td>
                             <td style="border:1px solid black; border-right: none;">
-                                <div style="margin-top: -10px; margin-bottom: 20px;">
+                                <div style="margin-top: -13px; margin-bottom: 20px;">
                                     <p><strong>2</strong> <span style="padding-left: 5px;">Country of citizenship</span>
                                     </p>
                                 </div>
-                                <!-- <span><strong>{{account_info.identification_country.name_en_US}}</strong></span> -->
+                                <span><strong>{{account_info.identification_country.name_en_US}}</strong></span>
                             </td>
                         </div>
                     </tr>
