--- a/cash.html
+++ b/cash.html
@@ -3320,7 +3320,7 @@
                                         </span> 
                                     </p>
                                 </div>
-                                <span><strong>{{account_info.identification_country.name_en_US}}</strong></span>
+                                <span style="padding-left: 70px;"><strong>{{account_info.identification_country.name_en_US}}</strong></span>
                             </td>
                             <td style="border:1px solid black; border-right: none;">
                                 <div style="margin-top: -13px; margin-bottom: 20px;">
