--- a/cash.html
+++ b/cash.html
@@ -3327,7 +3327,7 @@
                                     <p><strong>2</strong> <span style="padding-left: 5px;">Country of citizenship</span>
                                     </p>
                                 </div>
-                                <span><strong>{{account_info.identification_country.name_en_US}}</strong></span>
+                                <span><strong>{{account_info.identification_country.name_zh_HK}}</strong></span>
                             </td>
                         </div>
                     </tr>
