--- a/cash.html
+++ b/cash.html
@@ -124,13 +124,13 @@
                                     <strong>姓名(中文):先生/太太/小姐/女士</strong> &nbsp; &nbsp; &nbsp; 姓:
                                 </td>
                                 <td class=" bod-right" width="25%">
-                                    <strong>{{account_info.firstname_zh}}</strong>
+                                    <strong>{{account_info.lastname_zh}}</strong>
                                 </td>
                                 <td class="light bod-right" width="15%">
                                     <strong>名:</strong>
                                 </td>
                                 <td width="25%">
-                                    <strong>{{account_info.lastname_zh}}</strong>
+                                    <strong>{{account_info.firstname_zh}}</strong>
                                 </td>
                             </tr>
 
@@ -292,7 +292,7 @@
                                     住宅電話號碼:
                                 </td>
                                 <td class=" bod-right" width="20%">
-                                    <strong>{{account_info.country_phone_code_home}}{{account_info.phone_number_home}}</strong>
+                                    <strong>+{{account_info.country_phone_code_home}} {{account_info.phone_number_home}}</strong>
 
                                 </td>
                                 <td class="light bod-right" width="27%">
@@ -853,7 +853,7 @@
                     <td width="5%">(2)</td>
                     <td>An employee/licensed representative of Grand Partners Securities Limited (or a relative of such
                         person)? (If yes, please provide the name of the
-                        employee/licensed representative is working with, his/her name and CE no.) <br>
+                        employee/licensed representative is working with, his/her name and 121) <br>
                         利盟證券有限公司之僱員/持牌代表或該人士之親屬？（如是，謹請提供該僱員/持牌代表、姓名及中央編號）
                         <table width="100%">
                             <tr>
@@ -874,7 +874,7 @@
                                 </td>
                                 <td width="20%">
                                     <div class=" pad bod-bottom">
-                                        <strong>{{account_info.name}}</strong>
+                                        <strong>{{account_info.name_chinese}}</strong>
                                     </div>
                                 </td>
 
@@ -1048,7 +1048,7 @@
                     </td>
                     <td class="height50">
 
-                        <strong>{{account_info.authorised_person_1_country_phone_code}}{{account_info.authorised_person_1_phone_number}}</strong>
+                        <strong>+{{account_info.authorised_person_1_country_phone_code}} {{account_info.authorised_person_1_phone_number}}</strong>
                     </td>
 
                 </tr>
@@ -1090,7 +1090,7 @@
                     </td>
                     <td class="height50">
 
-                        <strong>{{account_info.authorised_person_2_country_phone_code}}{{account_info.authorised_person_2_phone_number}}</strong>
+                        <strong>+{{account_info.authorised_person_2_country_phone_code}} {{account_info.authorised_person_2_phone_number}}</strong>
                     </td>
 
                 </tr>
@@ -1133,7 +1133,7 @@
                     </td>
                     <td class="height50">
 
-                        <strong>{{account_info.authorised_person_3_country_phone_code}}{{account_info.authorised_person_3_phone_number}}</strong>
+                        <strong>+{{account_info.authorised_person_3_country_phone_code}} {{account_info.authorised_person_3_phone_number}}</strong>
                     </td>
 
                 </tr>
@@ -1443,7 +1443,10 @@
                     <td width="10%"></td>
                     <td width="30%">
                         <div class="bod-bottom">
-                            <strong>{{account.create_date}}</strong>
+                            <strong>
+                                &nbsp;
+                                <!-- {{account.create_date}} -->
+                            </strong>
                         </div>
                         Date 日期
                     </td>
@@ -1912,7 +1915,7 @@
                     <td><strong>(5) 出生日期 * </strong> (日 /月 /年) </td>
                     <td width="50%">
                         <div class="bod-bottom">
-                            <strong>{{account_info.dob_format2}}</strong>
+                            <strong>{{account_info.dob_dmy}}</strong>
                         </div>
                     </td>
                 </tr>
@@ -1999,7 +2002,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th align="left" class="pad" width="15%">(1) </th>
+                        <th align="left" class="pad" width="15%">(1) {{account_info.address_country}}</th>
                         <td width="15%">
                             <div class="">
                                 <strong>{{account_info.tax_id}}</strong>
@@ -2910,6 +2913,7 @@
 
         </div>
         <!--page10-->
+        <!-- TODO delete -->
         <div class="container">
 
             <div class="mt-15"></div>
@@ -3742,17 +3746,17 @@
                     </li>
                     <br>
                     <li>
-                        <input type="checkbox" name="" id="credit">
+                        <input type="checkbox" name="" id="credit" class="checkbox-checked">
                         <label for="credit">將款項存入本人/吾等/本公司在上列銀行之港幣儲蓄/往來帳戶.-
                             Credit to my/our HK$ saving /current account with the above bank.
                         </label>
                     </li>
                 </ol>
             </div>
-            <p class="mini-container">Credit to my/our HK$ saving /current account with the above bank.</p>
+            <!-- <p class="mini-container">Credit to my/our HK$ saving /current account with the above bank.</p> -->
 
             <table width="100%" cellspacing="0" border="1" class="table">
-                <tr>
+                <!-- <tr>
                     <td width="35%">
                         <input type="checkbox" name="" id="HSBC">
                         <label for="HSBC">匯豐銀行<br>&nbsp; &nbsp; &nbsp; &nbsp; HSBC</label>
@@ -3824,11 +3828,16 @@
                             </tbody>
                         </table>
                     </td>
-                </tr>
+                </tr> -->
                 <tr>
                     <td width="35%">
                         <input type="checkbox" name="" id="other_bank">
-                        <label for="other_bank">其他銀行 Other Bank Name<br>&nbsp; &nbsp; &nbsp; &nbsp; 銀行名稱</label>
+                        <label for="other_bank">
+                            <!-- 其他銀行 Other Bank Name -->
+                            <!-- <br>  -->
+                            銀行名稱 &nbsp; &nbsp; &nbsp; &nbsp;
+                            {{account_info.bank_name}}
+                        </label>
                     </td>
                     <td class="pad0">
                         <table width="100%">
@@ -3839,7 +3848,7 @@
                                 </tr>
                                 <tr>
                                     <td>帳戶名稱 AC Name <strong
-                                            style="margin-left: 10px">{{account_info.bank_name}}</strong></td>
+                                            style="margin-left: 10px">{{account_info.name_english}}</strong></td>
                                 </tr>
                             </tbody>
                         </table>
