--- a/margin.html
+++ b/margin.html
@@ -322,7 +322,9 @@
                                     僱主（如屬自僱，謹請註明）:
                                 </td>
                                 <td class="" width="67%">
-                                    <strong>{{account_info.employer_address}}</strong>
+                                    <strong>
+                                        <!-- {{account_info.employer_address}} -->
+                                    </strong>
 
                                 </td>
 
@@ -568,7 +570,7 @@
                         <p>
                             <input type="checkbox" id="Yes2"
                                 class="{{account_info.futures_options_experience_id_yes_checkbox_class}}" />
-                            <label for="Yes2">Yes {{account_info.futures_options_experience_id_txt}}</label>
+                            <label for="Yes2">Yes 有 {{account_info.futures_options_experience_id_txt}}</label>
                             <!--<label for="Yes2">Yes 有 ______year (s) 年</label>-->
                         </p>
                     </td>
@@ -586,7 +588,7 @@
                         <p>
                             <input type="checkbox" id="Yes3"
                                 class="{{account_info.structured_product_experience_id_yes_checkbox_class}}" />
-                            <label for="Yes3">Yes {{account_info.structured_product_experience_id_txt}}</label>
+                            <label for="Yes3">Yes 有 {{account_info.structured_product_experience_id_txt}}</label>
                             <!--<label for="Yes3">Yes 有 _____year (s) 年</label>-->
                         </p>
                     </td>
