--- a/cash.html
+++ b/cash.html
@@ -317,7 +317,9 @@
                                     僱主（如屬自僱，謹請註明）:
                                 </td>
                                 <td class="" width="67%">
-                                    <strong>{{account_info.employer_address}}</strong>
+                                    <strong>
+                                        <!-- {{account_info.employer_address}} -->
+                                    </strong>
 
                                 </td>
 
@@ -555,7 +557,7 @@
                         <p>
                             <input type="checkbox" id="Yes2"
                                 class="{{account_info.futures_options_experience_id_yes_checkbox_class}}" />
-                            <label for="Yes2">Yes {{account_info.futures_options_experience_id_txt}}</label>
+                            <label for="Yes2">Yes 有 {{account_info.futures_options_experience_id_txt}}</label>
                             <!--<label for="Yes2">Yes 有 ______year (s) 年</label>-->
                         </p>
                     </td>
@@ -573,7 +575,7 @@
                         <p>
                             <input type="checkbox" id="Yes3"
                                 class="{{account_info.structured_product_experience_id_yes_checkbox_class}}" />
-                            <label for="Yes3">Yes {{account_info.structured_product_experience_id_txt}}</label>
+                            <label for="Yes3">Yes 有 {{account_info.structured_product_experience_id_txt}}</label>
                             <!--<label for="Yes3">Yes 有 _____year (s) 年</label>-->
                         </p>
                     </td>
@@ -589,7 +591,7 @@
                         <p>
                             <input type="checkbox" id="Yes4"
                                 class="{{account_info.foreign_currency_gold_experience_id_yes_checkbox_class}}" />
-                            <label for="Yes4">Yes {{account_info.foreign_currency_gold_experience_id_txt}}</label>
+                            <label for="Yes4">Yes 有 {{account_info.foreign_currency_gold_experience_id_txt}}</label>
                             <!--<label for="Yes4">Yes 有 ______year (s) 年</label>-->
                         </p>
                     </td>
@@ -2846,7 +2848,7 @@
             <table width='100%' class='table mt-20'>
                 <tr>
                     <td width="65%">客戶姓名: <span style="min-width: 45%;" class="bod-bottom m-width d-in">
-                            <strong>{{account_info.firstname_zh}}{{account_info.lastname_zh}}</strong>
+                            <strong>{{account_info.name_chinese}}</strong>
                         </span>
                     </td>
 
