--- a/cash.html
+++ b/cash.html
@@ -2229,7 +2229,7 @@
                     <td class="bod-left0">
                         <p>
                             <span class="bod-bottom m-width d-in" style="margin-left: 15px;">
-                                <strong> {{account_info.firstname_zh}} {{account_info.lastname_zh}}</strong>
+                                <strong> {{account_info.name_chinese}}</strong>
                             </span>
                         </p>
 
@@ -2245,7 +2245,7 @@
                     <td class="bod-left0">
                         <p>
                             <span class="bod-bottom m-width d-in" style="margin-left: 15px;">
-                                <strong> {{account_info.firstname_en}} {{account_info.lastname_en}}</strong>
+                                <strong> {{account_info.name_english}}</strong>
                             </span>
                         </p>
 
