--- a/margin.html
+++ b/margin.html
@@ -3079,6 +3079,7 @@
                                                 address. </strong>
                                         </span></p>
                                 </div>
+                                {{account_info.address}}
                             </td>
                         </div>
                     </tr>
@@ -3097,7 +3098,7 @@
                                     <p><span style="padding-left: 5px;">Country</span>
                                     </p>
                                 </div>
-
+                                <span><strong>{{account_info.identification_country.name_en_US}}</strong></span>
                             </td>
                         </div>
                     </tr>
@@ -3271,7 +3272,7 @@
 
                         <div>
                             <div style="padding-left: 120px; margin-top: 20px;">
-                                <input type="checkbox" id="1" class="" />
+                                <input type="checkbox" id="1" class="checkbox-checked" />
                                 <label for="1 "> &nbsp;
                                     <sub>I certify that I have the capacity to sign for the person identified on line 1
                                         of this form.</sub>
