fix footer color

--- a/cash.html
+++ b/cash.html
@@ -3599,7 +3599,7 @@
             <div>
                 <div class="foot-right mt-50">
                     <span class="pt-15">(06/2017) </span>
-                    <div class="light-p pad">
+                    <div class="light pad">
                         11
                     </div>
                 </div>
@@ -3985,7 +3985,7 @@
         </div>
         <div class="foot-right" style="margin-top: 300px;">
             <span class="pt-15">(06/2017) </span>
-            <div class="light-p pad">
+            <div class="light pad">
                 13
             </div>
         </div>
@@ -4041,7 +4041,7 @@
 
         <div class="foot-right" style="margin-top: 700px;">
             <span class="pt-15">(06/2017) </span>
-            <div class="light-p pad">
+            <div class="light pad">
                 14
             </div>
         </div>
