--- a/margin.html
+++ b/margin.html
@@ -4342,7 +4342,7 @@
                                 </tr>
                                 <tr>
                                     <td>帳戶名稱 AC Name <strong
-                                            style="margin-left: 10px">{{account.name_english}}</strong>
+                                            style="margin-left: 10px">{{account_info.name_english}}</strong>
                                     </td>
                                 </tr>
                             </tbody>
