--- a/cash.html
+++ b/cash.html
@@ -1881,7 +1881,7 @@
                 </div>
             </div>
 
-            <!-- <div class="clear break-after"></div> -->
+            <div class="clear break-after"></div>
 
         </div>
 
@@ -3466,7 +3466,7 @@
             </div>
             <div class="clear break-after"></div>
         </div>
-        
+
         <!--page15-->
         <div class="container">
 
