--- a/cash.html
+++ b/cash.html
@@ -1871,7 +1871,7 @@
                     </tr>
                 </tbody>
             </table>
-            <div class="page-footer mt-50" style="bottom: -400px;">
+            <div class="page-footer mt-50">
 
                 <div class="foot-right">
                     <span class="pt-15">(06/2017) </span>
