--- a/margin.html
+++ b/margin.html
@@ -3200,7 +3200,7 @@
                 </div>
                 <div>
                     <p> <strong>9</strong> <span style="padding-left: 8px;">I certify that the beneficial owner is a
-                            resident of <span class="bod-bottom  d-in" style="min-width: 500px;"></span> within the
+                            resident of <span class="bod-bottom  d-in"></span> within the
                             meaning of the income tax
                             treaty between the United States and that country. </span> </p>
                     <p></p>
