cash - fix margin

--- a/cash.html
+++ b/cash.html
@@ -3334,8 +3334,7 @@
 
         <!-- Adding page 13  -->
     <!-- ................................................-->
-    <div class="container" style="margin-top: 500px;">
-        <div style="margin-top: 200px;">&nbsp;</div>
+    <div class="container">
         <div class="header mt-15">
             <div class="head-left">
                 <img src="images/logo.jpg" alt="logo">
@@ -3402,7 +3401,7 @@
             <p class="linespace1-5 mt-15">本人/吾等如未能向 貴公司提供個人資料或拒絕或撤回同意，可能意味著
                 貴公司不會或不能夠再（視情況而定）執行本人/吾等的交易指示或向本人/吾等提供證券交易之相關服務，惟出售、轉出或提取本人/吾等現有的證券持倉（如有）除外。 </p>
         </div>
-        <div class="foot-right" style="margin-top: 300px;">
+        <div class="foot-right">
             <span class="pt-15">(06/2017) </span>
             <div class="light pad">
                 13
