--- a/margin.html
+++ b/margin.html
@@ -4135,10 +4135,12 @@
                 <p class="linespace1-5 mt-15">本人/吾等如未能向 貴公司提供個人資料或拒絕或撤回同意，可能意味著
                     貴公司不會或不能夠再（視情況而定）執行本人/吾等的交易指示或向本人/吾等提供證券交易之相關服務，惟出售、轉出或提取本人/吾等現有的證券持倉（如有）除外。 </p>
             </div>
-            <div class="foot-right" style="margin-top: 200px;">
-                <span class="pt-15">(06/2017) </span>
-                <div class="light-p pad">
-                    13
+            <div class="page-footer"></div>
+                <div class="foot-right" >
+                    <span class="pt-15">(06/2017) </span>
+                    <div class="light-p pad">
+                        13
+                    </div>
                 </div>
             </div>
             <div class="clear break-after"></div>
@@ -4191,11 +4193,12 @@
                     3200。
                 </p>
           
-          
-            <div class="foot-right" style="margin-top: 650px;">
-                <span class="pt-15">(06/2017) </span>
-                <div class="light-p pad">
-                    14
+            <div class="page-footer">
+                <div class="foot-right">
+                    <span class="pt-15">(06/2017) </span>
+                    <div class="light-p pad">
+                        14
+                    </div>
                 </div>
             </div>
             <div class="clear break-after"></div>
