margin - fix page break

--- a/margin.html
+++ b/margin.html
@@ -1990,7 +1990,7 @@
                         </div>
                     </div>
         
-                    <!-- <div class="clear break-after"></div> -->
+                    <div class="clear break-after"></div>
                 </div>
 
         <!--page6-->
