last page no page break

--- a/cash.html
+++ b/cash.html
@@ -3932,7 +3932,7 @@
                 </div>
             </div>
 
-            <div class="clear break-after"></div>
+            <!-- <div class="clear break-after"></div> -->
 
         </div>
         
