--- a/margin.html
+++ b/margin.html
@@ -4008,7 +4008,7 @@
                 </div>
             </div>
 
-            <div class="clear break-after"></div>
+            <!-- <div class="clear break-after"></div> -->
 
         </div>
         
