--- a/cash.html
+++ b/cash.html
@@ -876,7 +876,7 @@
                                 </td>
                                 <td width="20%">
                                     <div class=" pad bod-bottom">
-                                        <strong>{{{account_info.name_chinese}}}</strong>
+                                        <strong>{{{account_info.name_english}}}</strong>
                                     </div>
                                 </td>
 
@@ -1927,7 +1927,7 @@
             <table width='100%' class='table mt-20'>
                 <tr>
                     <td width="65%">客戶姓名: <span style="min-width: 45%;" class="bod-bottom m-width d-in">
-                            <strong>{{{account_info.name_chinese}}}</strong>
+                            <strong>{{{account_info.name_english}}}</strong>
                         </span>
                     </td>
 
@@ -2029,7 +2029,7 @@
 
                     <td width="35%"">Account Name <br> 帳戶名稱 :  <span style=" min-width: 70% ;"
                         class="bod-bottom m-width d-in">
-                        <strong>{{{account_info.name_chinese}}}</strong>
+                        <strong>{{{account_info.name_english}}}</strong>
                         </span>
                     </td>
                 </tr>
@@ -2615,7 +2615,7 @@
                         <!--<strong>XXXXXXXX</strong>-->
                     </span></p>
                 <p class="mt-20">姓名 ： <span class="bod-bottom m-width d-in">
-                        <strong>{{{account_info.name_chinese}}}</strong>
+                        <strong>{{{account_info.name_english}}}</strong>
                     </span></p>
                 <p>身分 ： <span class="bod-bottom m-width d-in">
                         <!-- <strong>XXXXXXXX</strong> -->
@@ -2963,7 +2963,7 @@
                                             Owner</strong>(see instructions)
                                         </span> </p>
                                 </div>
-                                <span><strong style="padding-left: 70px;">{{{account_info.name_chinese}}}</strong></span>
+                                <span><strong style="padding-left: 70px;">{{{account_info.name_english}}}</strong></span>
                             </td>
                             <td style="border:1px solid black; border-right: none;">
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
@@ -3198,7 +3198,7 @@
                                         <sub style="padding-left: 130px;">Date (MM-DD-YYYY)</sub>
                                     </div>
                                     <span class="bod-bottom  d-in" style="min-width: 460px;"><strong
-                                            style="padding-left: 70px;">{{{account_info.name_chinese}}}</strong></span>
+                                            style="padding-left: 70px;">{{{account_info.name_english}}}</strong></span>
                                 </div>
 
                         </div>
@@ -3252,7 +3252,7 @@
                 </span><br><br>
 
                 </span> 客戶名稱 : <span class="bod-bottom m-width d-in" style="margin-left:10px ; width: 430px">
-                    <strong>{{{account_info.name_chinese}}}</strong>
+                    <strong>{{{account_info.name_english}}}</strong>
                 </span><br><br>
 
                 </span> 戶口號碼 : <span class="bod-bottom m-width d-in" style="margin-left:10px ; width: 430px">
@@ -3439,7 +3439,7 @@
             </div>
             <div style="font-size: 25px; margin-top: 50px;">
                 <label>客戶名稱: <span class="bod-bottom  d-in mt-50"
-                        style="min-width: 220px; margin-top: 50px;"><strong>{{{account_info.name_chinese}}}</strong></span></label>
+                        style="min-width: 220px; margin-top: 50px;"><strong>{{{account_info.name_english}}}</strong></span></label>
             </div>
             <div style="font-size: 25px; margin-top: 50px;">
                 <label>客戶號碼: <span class="bod-bottom  d-in mt-50"
