--- a/margin.html
+++ b/margin.html
@@ -1095,7 +1095,8 @@
                         <strong>{{{account_info.authorised_person_1_relationship}}}</strong>
                     </td>
                     <td class="" rowspan="2" valign="bottom" width="22%">
-
+                        {{{account_info.authorised_person_1_name}}}
+                        <br><br><br>
                         Specimen Signature 簽名樣式
                     </td>
                 </tr>
@@ -1137,6 +1138,8 @@
                         <strong>{{{account_info.authorised_person_2_relationship}}}</strong>
                     </td>
                     <td class="" rowspan="2" valign="bottom">
+                        {{{account_info.authorised_person_2_name}}}
+                        <br><br><br>
 
                         Specimen Signature 簽名樣式
                     </td>
@@ -1180,6 +1183,8 @@
                         <strong>{{{account_info.authorised_person_3_relationship}}}</strong>
                     </td>
                     <td class="" rowspan="2" valign="bottom">
+                        {{{account_info.authorised_person_3_name}}}
+                        <br><br><br>
 
                         Specimen Signature 簽名樣式
                     </td>
