--- a/cash.html
+++ b/cash.html
@@ -1030,6 +1030,8 @@
                         <strong>{{{account_info.authorised_person_1_relationship}}}</strong>
                     </td>
                     <td class="" rowspan="2" valign="bottom" width="22%">
+                        {{{account_info.authorised_person_1_name}}}
+                        <br><br><br>
 
                         Specimen Signature 簽名樣式
                     </td>
@@ -1072,6 +1074,8 @@
                         <strong>{{{account_info.authorised_person_2_relationship}}}</strong>
                     </td>
                     <td class="" rowspan="2" valign="bottom">
+                        {{{account_info.authorised_person_2_name}}}
+                        <br><br><br>
 
                         Specimen Signature 簽名樣式
                     </td>
@@ -1115,6 +1119,8 @@
                         <strong>{{{account_info.authorised_person_3_relationship}}}</strong>
                     </td>
                     <td class="" rowspan="2" valign="bottom">
+                        {{{account_info.authorised_person_3_name}}}
+                        <br><br><br>
 
                         Specimen Signature 簽名樣式
                     </td>
