--- a/cash.html
+++ b/cash.html
@@ -1384,9 +1384,14 @@
             <table width="100%">
                 <tr>
                     <td width="33%" class="height70">Applicant’s Signature:<br>
-                        申請人簽署: </td>
+                        申請人簽署: 
+                        <br><br>
+                        {{{account_info.name_english}}}
+                    </td>
                     <td width="33%" class="height70"> Signature:<br>
-                        見證人簽署: </td>
+                        見證人簽署: 
+                        
+                    </td>
                     <td width="33%" class="height70">Grand Partners Securities Limited licensed representative name
                         :<br>
                         利盟證券有限公司持牌代表姓名
@@ -1869,7 +1874,12 @@
 
                     </tr>
                     <tr>
-                        <td><span class="bod-bottom  d-in mt-50" style="min-width: 220px; margin-top: 100px;"></span>
+                        <td>
+                            <span class="d-in mt-50" style="min-width: 220px; margin-top: 50px;"></span>
+                            <br>
+                            {{{account_info.name_english}}}
+                            <br>
+                            <span class="bod-bottom  d-in mt-50" style="min-width: 220px; margin-top: 50px;"></span>
                         </td>
                         <td><span class="bod-bottom  d-in mt-50" style="min-width: 220px; margin-top: 100px;"></span>
                         </td>
@@ -2086,7 +2096,10 @@
             </p>
             <hr height="5" class="mt-15">
 
-            <div class="mt-20" style="padding-top: 30px;  margin-top: 150px;">
+            <div class="mt-20" style="padding-top: 30px; margin-top: 100px;"></div>
+            {{{account_info.name_english}}}
+
+            <div class="mt-20" style="padding-top: 30px;  margin-top: 0px;">
                 <span class="bod-top2">Client Signature (s) 客戶簽署* :</span>
                 <p>Date 日期 : s<pan class="bod-bottom m-width d-in">
                         <!--<strong>XXXXXXX</strong> -->
@@ -2817,7 +2830,7 @@
                 <p>Signature of Customer 客戶簽署</p>
 
                 <p class="mt-50">X &nbsp; &nbsp; &nbsp; <span class="bod-bottom m-width d-in">
-                        <!--<strong>XXXXXXXX</strong> -->
+                        <strong>{{{account_info.name_chinese}}}</strong>
                     </span>
                 </p>
 
@@ -3190,10 +3203,12 @@
                                         of this form.</sub>
                             </div>
 
-                            <span">
+                            <span>
                                 <h3>Sign Here ▶</h3></span>
+                                
                                 <div style="padding-left: 120px; margin-top: -10px;">
-
+                                    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+                                    {{{account_info.name_english}}}
                                     <div>
                                         <span class="bod-bottom  d-in" style="min-width: 460px;"></span>
                                         <span class="bod-bottom  d-in"
