--- a/cash.html
+++ b/cash.html
@@ -1385,8 +1385,8 @@
                 <tr>
                     <td width="33%" class="height70">Applicant’s Signature:<br>
                         申請人簽署: 
-                        <br><br>
-                        {{{account_info.name_english}}}
+                        <!-- <br><br>
+                        {{{account_info.name_english}}} -->
                     </td>
                     <td width="33%" class="height70"> Signature:<br>
                         見證人簽署: 
@@ -2830,7 +2830,7 @@
                 <p>Signature of Customer 客戶簽署</p>
 
                 <p class="mt-50">X &nbsp; &nbsp; &nbsp; <span class="bod-bottom m-width d-in">
-                        <strong>{{{account_info.name_chinese}}}</strong>
+                        <strong>{{{account_info.name_english}}}</strong>
                     </span>
                 </p>
 
