--- a/cash.html
+++ b/cash.html
@@ -1401,7 +1401,7 @@
                 <tr>
                     <td width="32%">
                         <div class="bod-bottom mt-20">
-                            <strong>{{{account_info.firstname_en}}} {{{account_info.lastname_en}}}</strong>
+                            <strong>{{{account_info.name_english}}}</strong>
                         </div>
                     </td>
                     <td width="32%">
