--- a/margin.html
+++ b/margin.html
@@ -1483,7 +1483,7 @@
                 <tr>
                     <td width="32%" style="vertical-align: bottom">
                         <div class="bod-bottom">
-                            <strong>{{{account_info.firstname_en}}}{{{account_info.lastname_en}}}</strong>
+                            <strong>{{{account_info.name_english}}}</strong>
                         </div>
                     </td>
                     <td width="32%" style="vertical-align: bottom">
