fix date format

--- a/margin.html
+++ b/margin.html
@@ -2941,7 +2941,7 @@
                 </p>
 
                 <p class="mt-15">Date (MM/DD/YY) 日期(月/日/年) &nbsp; &nbsp; &nbsp; <span class="bod-bottom m-width d-in">
-                        <strong>{{{account.create_date_mmddyy}}}</strong>
+                    <strong>{{{account.create_date_mdy}}}</strong>
                     </span>
                 </p>
             </div>
