--- a/cash.html
+++ b/cash.html
@@ -2835,7 +2835,7 @@
                 </p>
 
                 <p class="mt-15">Date (MM/DD/YY) 日期(月/日/年) &nbsp; &nbsp; &nbsp; <span class="bod-bottom m-width d-in">
-                        <!--<strong>XXXXXXXX</strong> -->
+                        <strong>{{{account.create_date_mdy}}}</strong>
                     </span>
                 </p>
             </div>
