remove (06/2017) in footer

--- a/cash.html
+++ b/cash.html
@@ -745,7 +745,7 @@
                 Grand Partners Securities Limited Cash Account - Individual Account Opening Form
 
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light pad">
                         1
                     </div>
@@ -1157,7 +1157,7 @@
                 </div>
 
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
 
                 </div>
             </div>
@@ -1344,7 +1344,7 @@
                 </div>
 
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                 </div>
             </div>
             <div class="clear break-after"></div>
@@ -1686,7 +1686,7 @@
                 Grand Partners Securities Limited Cash Account - Individual Account Opening Form
 
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light pad">
                         4
                     </div>
@@ -1890,7 +1890,7 @@
             <div class="page-footer mt-50">
 
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light pad">
                         5
                     </div>
@@ -1994,7 +1994,7 @@
             <div class="page-footer mt-20">
 
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light pad">
                         6
                     </div>
@@ -2187,7 +2187,7 @@
             <div class="page-footer mt-20">
 
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light pad">
                         7
                     </div>
@@ -2474,7 +2474,7 @@
             </table>
             <div class="page-footer">
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light pad">
                         8
                     </div>
@@ -2843,7 +2843,7 @@
             <div class="page-footer mt-20">
 
                 <div class="foot-right ">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light pad">
                         10
                     </div>
@@ -3236,7 +3236,7 @@
             </div>
             <div>
                 <div class="foot-right mt-50">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light pad">
                         11
                     </div>
@@ -3344,7 +3344,7 @@
             <div class="page-footer" style="bottom: 100px">
 
                 <div style="float:right ; width: 140px;">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light pad">
                         12
                     </div>
@@ -3425,7 +3425,7 @@
 
         <div class="page-footer">
             <div class="foot-right">
-                <span class="pt-15">(06/2017) </span>
+                <span class="pt-15"> </span>
                 <div class="light pad">
                     13
                 </div>
@@ -3484,7 +3484,7 @@
     
             <div class="page-footer">
             <div class="foot-right">
-                <span class="pt-15">(06/2017) </span>
+                <span class="pt-15"> </span>
                 <div class="light pad">
                     14
                 </div>
@@ -3946,7 +3946,7 @@
             <div class="page-footer">
 
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light pad">
                         15
                     </div>
