--- a/margin.html
+++ b/margin.html
@@ -758,7 +758,7 @@
                 Grand Partners Securities Limited Margin Account - Individual Account Opening Form
 
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light-p pad" style="float: right;width: 50%;">
                         1
                     </div>
@@ -1221,7 +1221,7 @@
                 </div>
 
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
 
                 </div>
             </div>
@@ -1428,7 +1428,7 @@
                 </div>
 
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
 
                 </div>
             </div>
@@ -1786,7 +1786,7 @@
                 Grand Partners Securities Limited Margin Account - Individual Account Opening Form
 
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light-p pad">
                         4
                     </div>
@@ -1998,7 +1998,7 @@
                     <div class="page-footer mt-50" style="bottom: -495px;">
         
                         <div class="foot-right">
-                            <span class="pt-15">(06/2017) </span>
+                            <span class="pt-15"> </span>
                             <div class="light-p pad">
                                 5
                             </div>
@@ -2099,7 +2099,7 @@
 
             <div class="page-footer mt-20">
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light-p pad">
                         6
                     </div>
@@ -2306,7 +2306,7 @@
             <div class="page-footer mt-20">
 
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light-p pad">
                         7
                     </div>
@@ -2601,7 +2601,7 @@
             </table>
             <div class="page-footer mt-20">
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light-p pad">
                         8
                     </div>
@@ -2949,7 +2949,7 @@
             <div class="page-footer mt-20">
 
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light-p pad">
                         10
                     </div>
@@ -3317,7 +3317,7 @@
             </div>
             <div>
                 <div class="foot-right mt-50">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light-p pad">
                         11
                     </div>
@@ -3425,7 +3425,7 @@
             <div class="page-footer mt-20">
 
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light-p pad">
                         12
                     </div>
@@ -3501,7 +3501,7 @@
             </div>
             <div class="page-footer"></div>
                 <div class="foot-right" >
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light-p pad">
                         13
                     </div>
@@ -3558,7 +3558,7 @@
           
             <div class="page-footer">
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light-p pad">
                         14
                     </div>
@@ -4019,7 +4019,7 @@
             <div class="page-footer">
 
                 <div class="foot-right">
-                    <span class="pt-15">(06/2017) </span>
+                    <span class="pt-15"> </span>
                     <div class="light-p pad">
                         15
                     </div>
